--- a/app/src/main/res/layout/item_parent_data.xml
+++ b/app/src/main/res/layout/item_parent_data.xml
@@ -7,10 +7,11 @@
     android:layout_margin="@dimen/default_margin"
     android:orientation="vertical">
 
-    <TextView
+    <com.sam43.mindvalleychannels.utils.uicomponents.GilroyTextViewBold
         android:id="@+id/nestedTitleTextView"
         style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="0dp"
+        android:textSize="@dimen/sp_25"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,11 +22,23 @@
         android:id="@+id/nestedRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/default_margin_top"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/space_16"
+        android:layout_marginBottom="@dimen/space_16"
         android:paddingBottom="@dimen/default_margin"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/nestedTitleTextView"
         app:layout_constraintStart_toStartOf="@+id/nestedTitleTextView"
         app:layout_constraintTop_toBottomOf="@+id/nestedTitleTextView" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="@dimen/space_8"
+        android:layout_marginTop="@dimen/space_8"
+        android:background="@drawable/ic_list_divider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
