--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.MainFragment">
 
-    <TextView
+    <com.sam43.mindvalleychannels.utils.uicomponents.GilroyTextViewBold
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
