--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -2,4 +2,27 @@
 <resources>
     <dimen name="default_margin">4dp</dimen>
     <dimen name="default_margin_top">12dp</dimen>
+    <dimen name="space_8">8dp</dimen>
+    <dimen name="space_12">12dp</dimen>
+    <dimen name="space_16">16dp</dimen>
+    <dimen name="space_24">24dp</dimen>
+    <dimen name="space_32">32dp</dimen>
+    <dimen name="space_40">40dp</dimen>
+    <dimen name="space_50">50dp</dimen>
+    <dimen name="space_4">4dp</dimen>
+    <dimen name="space_250">250dp</dimen>
+    <dimen name="space_360">360dp</dimen>
+    <dimen name="space_10">10dp</dimen>
+    <dimen name="space_9">9dp</dimen>
+    <dimen name="space_2">2dp</dimen>
+    <dimen name="space_100">100dp</dimen>
+    <dimen name="space_80">80dp</dimen>
+    <dimen name="space_35">35dp</dimen>
+    <dimen name="space_70">70dp</dimen>
+    <dimen name="space_20">20dp</dimen>
+    <dimen name="space_30">30dp</dimen>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
+    <dimen name="space_6">6dp</dimen>
+    <dimen name="sp_25">25sp</dimen>
 </resources>
