--- a/app/src/main/res/layout/item_child_data_landscape.xml
+++ b/app/src/main/res/layout/item_child_data_landscape.xml
@@ -9,8 +9,8 @@
     android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
     android:orientation="vertical"
-    android:layout_width="130dp"
-    android:layout_height="200dp">
+    android:layout_width="320dp"
+    android:layout_height="172dp">
 
 
     <ImageView
@@ -21,7 +21,7 @@
         android:scaleType="centerCrop"
         android:contentDescription="@string/app_name" />
 
-    <com.sam43.mindvalleychannels.utils.uicomponents.GilroyTextViewMedium
+    <TextView
         android:id="@+id/tvInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
