--- a/app/src/main/res/layout/item_parent_data.xml
+++ b/app/src/main/res/layout/item_parent_data.xml
@@ -7,7 +7,7 @@
     android:layout_margin="@dimen/default_margin"
     android:orientation="vertical">
 
-    <com.sam43.mindvalleychannels.utils.uicomponents.GilroyTextViewBold
+    <TextView
         android:id="@+id/nestedTitleTextView"
         style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="0dp"
