--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -25,4 +25,7 @@
     <dimen name="list_item_spacing_half">8dp</dimen>
     <dimen name="space_6">6dp</dimen>
     <dimen name="sp_25">25sp</dimen>
+    <dimen name="sp_17">17sp</dimen>
+    <dimen name="sp_13">13sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
 </resources>
