--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,7 +11,7 @@
         <item name="colorOnSecondary">@color/backGround</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <item name="fontFamily">@font/gilroy</item>
+        <item name="fontFamily">@font/roboto</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
