--- a/app/src/main/res/layout/item_child_data_landscape.xml
+++ b/app/src/main/res/layout/item_child_data_landscape.xml
@@ -1,30 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/backGround"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="0dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="5dp"
-    android:orientation="vertical"
-    android:layout_width="320dp"
-    android:layout_height="172dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="@dimen/space_8"
+    android:background="@color/transparent">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="320dp"
+        android:layout_height="172dp"
+        android:orientation="vertical"
+        app:cardBackgroundColor="@color/backGround"
+        app:cardCornerRadius="@dimen/space_8"
+        app:cardElevation="@dimen/default_margin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/imageView_single_movie"
-        android:layout_width="match_parent"
-        android:src="@drawable/placeholder"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/app_name" />
+        <ImageView
+            android:id="@+id/imageView_single_movie"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/app_name"
+            android:scaleType="centerCrop"
+            android:src="@drawable/placeholder" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tvInfo"
+        style="@style/TextHeading1Style"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_12"
+        android:text="@string/app_name"
+        app:layout_constraintEnd_toEndOf="@+id/cardView"
+        app:layout_constraintStart_toStartOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 
-</androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/tvSubInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_12"
+        android:layout_marginBottom="@dimen/space_16"
+        android:fontFamily="@font/roboto_bold"
+        android:letterSpacing="0.08"
+        android:text="@string/app_name"
+        android:textSize="@dimen/sp_13"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tvInfo"
+        app:layout_constraintStart_toStartOf="@+id/tvInfo"
+        app:layout_constraintTop_toBottomOf="@+id/tvInfo" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
