--- a/app/src/main/res/layout/item_parent_data.xml
+++ b/app/src/main/res/layout/item_parent_data.xml
@@ -9,8 +9,9 @@
 
     <TextView
         android:id="@+id/nestedTitleTextView"
-        style="@style/TextAppearance.AppCompat.Title"
+        style="@style/TextHeading1Style"
         android:layout_width="0dp"
+        android:textStyle="bold"
         android:textSize="@dimen/sp_25"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
