--- a/app/src/main/res/layout/item_child_data_category.xml
+++ b/app/src/main/res/layout/item_child_data_category.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView android:id="@+id/cardView"
-    android:layout_width="150dp"
-    android:layout_height="56dp"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:orientation="vertical"
     app:cardBackgroundColor="@color/backGround"
-    app:cardCornerRadius="@dimen/space_8"
+    app:cardCornerRadius="@dimen/space_35"
     android:layout_margin="@dimen/space_8"
     app:cardElevation="@dimen/default_margin"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
+    android:layout_gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/tvInfo"
         style="@style/TextHeading1Style"
+        android:text="@string/app_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/app_name"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:maxLines="2"
         android:scaleType="centerCrop"
         android:src="@drawable/placeholder" />
 
