--- a/app/src/main/res/layout/item_child_data_landscape.xml
+++ b/app/src/main/res/layout/item_child_data_landscape.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView_single_movie"
+            android:id="@+id/imgCover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/app_name"
