feature/loading_data_from_remote - Channels section is working

--- a/app/src/main/res/layout/item_child_data_portrait.xml
+++ b/app/src/main/res/layout/item_child_data_portrait.xml
@@ -35,6 +35,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_12"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:maxWidth="152dp"
+        android:maxLines="3"
+        android:ellipsize="end"
         android:text="@string/app_name"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
@@ -51,6 +56,7 @@
         android:letterSpacing="0.08"
         android:text="@string/app_name"
         android:textSize="@dimen/sp_13"
+        android:maxWidth="152dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tvInfo"
         app:layout_constraintStart_toStartOf="@+id/tvInfo"
