--- a/app/src/main/res/layout/item_child_data_landscape.xml
+++ b/app/src/main/res/layout/item_child_data_landscape.xml
@@ -34,6 +34,11 @@
         style="@style/TextHeading1Style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="320dp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:maxLines="3"
+        android:ellipsize="end"
         android:layout_marginTop="@dimen/space_12"
         android:text="@string/app_name"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
@@ -49,6 +54,8 @@
         android:layout_marginBottom="@dimen/space_16"
         android:fontFamily="@font/roboto_bold"
         android:letterSpacing="0.08"
+        android:maxWidth="320dp"
+        android:gravity="center"
         android:text="@string/app_name"
         android:textSize="@dimen/sp_13"
         app:layout_constraintBottom_toBottomOf="parent"
