--- a/app/src/main/res/layout/item_child_data_category.xml
+++ b/app/src/main/res/layout/item_child_data_category.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     app:cardBackgroundColor="@color/backGround"
     app:cardCornerRadius="@dimen/space_35"
-    android:layout_margin="@dimen/space_8"
+    android:layout_margin="@dimen/default_margin"
     app:cardElevation="@dimen/default_margin"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
