--- a/app/src/main/res/layout/item_child_data_landscape.xml
+++ b/app/src/main/res/layout/item_child_data_landscape.xml
@@ -56,6 +56,7 @@
         android:letterSpacing="0.08"
         android:maxWidth="320dp"
         android:gravity="center"
+        android:maxLines="2"
         android:text="@string/app_name"
         android:textSize="@dimen/sp_13"
         app:layout_constraintBottom_toBottomOf="parent"
