--- a/app/src/main/res/layout/item_child_data_portrait.xml
+++ b/app/src/main/res/layout/item_child_data_portrait.xml
@@ -40,7 +40,7 @@
         android:maxWidth="152dp"
         android:maxLines="3"
         android:ellipsize="end"
-        android:text="@string/app_name"
+        tools:text="@string/app_name"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
@@ -53,8 +53,10 @@
         android:layout_marginTop="@dimen/space_12"
         android:layout_marginBottom="@dimen/space_16"
         android:fontFamily="@font/roboto_bold"
+        android:gravity="center"
+        android:maxLines="2"
         android:letterSpacing="0.08"
-        android:text="@string/app_name"
+        tools:text="@string/app_name"
         android:textSize="@dimen/sp_13"
         android:maxWidth="152dp"
         app:layout_constraintBottom_toBottomOf="parent"
