--- a/app/src/main/res/layout/item_parent_data.xml
+++ b/app/src/main/res/layout/item_parent_data.xml
@@ -11,35 +11,62 @@
         android:id="@+id/nestedTitleTextView"
         style="@style/TextHeading1Style"
         android:layout_width="0dp"
-        android:textStyle="bold"
-        android:textSize="@dimen/sp_25"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_25"
+        android:textStyle="bold"
+        android:paddingStart="@dimen/space_12"
+        android:paddingEnd="@dimen/default_margin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ivChannelIcon"
         app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/app_name" />
+
+    <TextView
+        android:id="@+id/tvMediaCount"
+        style="@style/TextHeading2Style"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/subTitle"
+        android:textSize="@dimen/sp_17"
+        android:textStyle="bold"
+        android:paddingStart="@dimen/space_12"
+        android:paddingEnd="@dimen/default_margin"
+        app:layout_constraintEnd_toEndOf="@+id/nestedTitleTextView"
+        app:layout_constraintStart_toStartOf="@+id/nestedTitleTextView"
+        app:layout_constraintTop_toBottomOf="@+id/nestedTitleTextView"
         tools:text="@string/app_name" />
 
     <com.github.rubensousa.gravitysnaphelper.OrientationAwareRecyclerView
         android:id="@+id/nestedRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_16"
-        android:layout_marginBottom="@dimen/space_16"
         android:paddingBottom="@dimen/default_margin"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
-        app:layout_constraintEnd_toEndOf="@+id/nestedTitleTextView"
-        app:layout_constraintStart_toStartOf="@+id/nestedTitleTextView"
-        app:layout_constraintTop_toBottomOf="@+id/nestedTitleTextView" />
+        android:layout_marginTop="@dimen/space_16"
+        app:layout_constraintEnd_toEndOf="@+id/tvMediaCount"
+        app:layout_constraintStart_toStartOf="@+id/tvMediaCount"
+        app:layout_constraintTop_toBottomOf="@+id/tvMediaCount" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="@dimen/space_16"
         android:layout_marginBottom="@dimen/space_8"
-        android:layout_marginTop="@dimen/space_8"
         android:background="@drawable/ic_list_divider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nestedRecyclerView" />
+
+    <ImageView
+        android:id="@+id/ivChannelIcon"
+        android:layout_width="@dimen/space_50"
+        android:layout_height="@dimen/space_50"
+        android:layout_margin="@dimen/default_margin"
+        app:layout_constraintBottom_toBottomOf="@+id/tvMediaCount"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/nestedTitleTextView"
+        app:srcCompat="@drawable/ic_icon_asset_circular"
+        android:contentDescription="@string/app_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
