--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.MainFragment">
+    android:layout_height="wrap_content"
+    android:scrollIndicators="none"
+    tools:targetApi="m">
 
-    <TextView
-        android:id="@+id/tvTitle"
-        style="@style/TextHeading1Style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/sp_25"
-        android:visibility="gone"
-        tools:text="@string/app_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.github.rubensousa.gravitysnaphelper.OrientationAwareRecyclerView
-        android:id="@+id/recyclerView"
+    <LinearLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/space_8"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_margin="@dimen/space_16"
+        tools:context=".ui.main.MainFragment">
 
+        <TextView
+            android:id="@+id/tvTitle"
+            style="@style/TextHeading1Style"
+            android:layout_width="match_parent"
+            android:textStyle="bold"
+            android:textSize="@dimen/sp_28"
+            android:textColor="@color/TopTitle"
+            android:layout_margin="@dimen/default_margin"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/label_channels"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <include layout="@layout/layout_episode_data"
+            android:id="@+id/contentEpisode"/>
+        <com.github.rubensousa.gravitysnaphelper.OrientationAwareRecyclerView
+            android:id="@+id/rvChannels"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_8"/>
+        <include layout="@layout/layout_category_data"
+            android:id="@+id/contentCategory"/>
+    </LinearLayout>
+
+</androidx.core.widget.NestedScrollView>
