--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="secondary_dark">#FF018786</color>
     <color name="backGround">#23272F</color>
     <color name="mainTitle">#FFFFFFFF</color>
+    <color name="TopTitle">#C1C1C1</color>
     <color name="subTitle">#95989D</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
