--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,6 @@
     <dimen name="sp_17">17sp</dimen>
     <dimen name="sp_13">13sp</dimen>
     <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_28">28sp</dimen>
+    <dimen name="sp_20">20sp</dimen>
 </resources>
