--- a/app/src/main/res/layout/item_parent_data.xml
+++ b/app/src/main/res/layout/item_parent_data.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/default_margin"
     android:orientation="vertical">
 
     <TextView
@@ -11,7 +12,8 @@
         style="@style/TextHeading1Style"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/sp_25"
+        android:textSize="@dimen/sp_20"
+        android:layout_marginTop="@dimen/space_8"
         android:textStyle="bold"
         android:paddingStart="@dimen/space_14"
         android:paddingEnd="@dimen/default_margin"
@@ -62,10 +64,12 @@
         android:layout_width="@dimen/space_50"
         android:layout_height="@dimen/space_50"
         android:layout_margin="@dimen/space_8"
-        app:layout_constraintBottom_toBottomOf="@+id/tvMediaCount"
+        android:background="@drawable/bg_circular"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toTopOf="@+id/tvMediaCount"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.22"
         app:layout_constraintTop_toTopOf="@+id/nestedTitleTextView"
-        app:srcCompat="@drawable/ic_icon_asset_circular"
-        android:contentDescription="@string/app_name" />
+        app:srcCompat="@drawable/ic_icon_asset_circular" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
