--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -31,4 +31,8 @@
     <dimen name="sp_28">28sp</dimen>
     <dimen name="sp_20">20sp</dimen>
     <dimen name="space_14">14dp</dimen>
+    <dimen name="sp_30">30sp</dimen>
+    <dimen name="space_60">60dp</dimen>
+    <dimen name="sp_12">12sp</dimen>
+    <dimen name="sp_14">14sp</dimen>
 </resources>
