--- a/app/src/main/res/layout/item_child_data_portrait.xml
+++ b/app/src/main/res/layout/item_child_data_portrait.xml
@@ -54,6 +54,7 @@
         android:layout_marginBottom="@dimen/space_16"
         android:fontFamily="@font/roboto_bold"
         android:gravity="center"
+        android:textStyle="bold"
         android:maxLines="2"
         android:letterSpacing="0.08"
         tools:text="@string/app_name"
