--- a/app/src/main/res/drawable/bg_splash.xml
+++ b/app/src/main/res/drawable/bg_splash.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list
+<layer-list xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android" >
-
     <!--set image to be shown on circular image view-->
-    <item android:drawable="@drawable/bg_circular"
+    <item android:drawable="@drawable/bg_normal"
         android:gravity="center"/>
     <item android:drawable="@drawable/ic_mindvalley_rounded"
-        android:gravity="center"/>
+        android:gravity="center" />
 </layer-list>
