feature/splash-screen - ui fix and updated

--- a/app/src/main/res/layout/item_child_data_category.xml
+++ b/app/src/main/res/layout/item_child_data_category.xml
@@ -7,7 +7,7 @@
     app:cardBackgroundColor="@color/backGround"
     app:cardCornerRadius="@dimen/space_35"
     android:layout_margin="@dimen/space_8"
-    app:cardElevation="@dimen/default_margin"
+    app:cardElevation="@dimen/space_2"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
