feature/splash-screen - ui fix (2) and updated

--- a/app/src/main/res/layout/layout_episode_data.xml
+++ b/app/src/main/res/layout/layout_episode_data.xml
@@ -54,7 +54,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_16"
-        android:layout_marginBottom="@dimen/space_16"
         android:paddingBottom="@dimen/default_margin"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="@+id/tvSubTitle"
@@ -65,8 +64,8 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginBottom="@dimen/space_8"
-        android:layout_marginTop="@dimen/space_8"
+        android:layout_marginBottom="@dimen/default_margin"
+        android:layout_marginTop="@dimen/default_margin"
         android:background="@drawable/ic_list_divider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
