--- a/app/src/main/res/layout/layout_episode_data.xml
+++ b/app/src/main/res/layout/layout_episode_data.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/default_margin"
     android:orientation="vertical">
 
     <TextView
@@ -13,6 +12,8 @@
         android:layout_width="0dp"
         android:textStyle="bold"
         android:textSize="@dimen/sp_20"
+        android:paddingStart="@dimen/space_8"
+        android:paddingEnd="@dimen/space_0"
         android:layout_height="wrap_content"
         android:textColor="@color/subTitle"
         app:layout_constraintEnd_toEndOf="parent"
