--- a/app/src/main/res/layout/item_child_data_landscape.xml
+++ b/app/src/main/res/layout/item_child_data_landscape.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="@dimen/space_8"
+    android:padding="@dimen/space_4"
     android:background="@color/transparent">
 
     <TextView
@@ -45,18 +45,18 @@
     <TextView
         android:id="@+id/tvInfo"
         style="@style/TextHeading1Style"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:maxWidth="320dp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:maxLines="3"
-        android:ellipsize="end"
         android:layout_marginTop="@dimen/space_12"
-        tools:text="@string/app_name"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        android:ellipsize="end"
+        android:gravity="center"
+        android:maxWidth="320dp"
+        android:maxLines="3"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        tools:text="@string/app_name" />
 
 
     <TextView
